# ShareBook

./: README.md
ShareBook_cli/: CMakeCache.txt  CMakeLists.txt  ShareBook_cli.pro  ShareBook_cli_en_001.ts  base64.h  boostclient.cpp  boostclient.h  boostnetwork.cpp  boostnetwork.h  client.cpp  client.h  clientInfo.h  cmake_install.cmake  controller.cpp  controllerfactory.cpp  controllerfactory.h  fileopendialog.cpp  fileopendialog.h  filesavedialog.cpp  imageprovider.cpp  imageprovider.h  main.cpp  messageuicontrol.cpp  network.cpp  network.h  personaluicontrol.cpp  personaluicontrol.h  publishjottingcontroller.cpp  publishjottingcontroller.h  publishpagecontrol.cpp  pushpagecontrol.cpp  rec.qrc  scanandcheckjottingcontroller.cpp  scanandcheckjottingcontroller.h  videopagecontrol.cpp
ShareBook_cli/android_sources/: AndroidManifest.xml
ShareBook_cli/json/: cmake_install.cmake
ShareBook_cli/qml/: PublishPage.qml  VideoPage.qml  main.qml
ShareBook_cli/qml/mediaplayer/: AudioControl.qml  PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml
ShareBook_cli/qtquick2controlsapplicationviewer/: qtquick2controlsapplicationviewer.h
ShareBook_srv/: CMakeCache.txt  CMakeLists.txt  aacdatasource.cpp  aacdatasource.h  base64.h  boostnetwork.cpp  boostnetwork.h  boostserver.cpp  boostserver.h  cacheflush.cpp  cmake_install.cmake  comment.cpp  commentbroker.cpp  commentbroker.h  commentinterface.cpp  commentinterface.h  commentproxy.cpp  controllerfactory.cpp  controllerfactory.h  encodephoto.cpp  h264datasource.cpp  h264datasource.h  initcontroller.cpp  (+46 more)
(+1 files in other folders)
